// serving/go-server/main.go
package main

import (
	"context"
	"fmt"
	"log"
	"net"
	"time"

	"net/http"

	"github.com/prometheus/client_golang/prometheus"
	"github.com/prometheus/client_golang/prometheus/promhttp"
	"google.golang.org/grpc"

	pb "ssm-inference-server/pb"
	// Note: Use gonnx for ONNX runtime [23] or onnxruntime-go [29]
)

type InferenceServer struct {
    pb.UnimplementedInferenceServiceServer
    model *ONNXModel  // Implement ONNX wrapper
}

// Prometheus metrics [43][49]
var (
    requestDuration = prometheus.NewHistogramVec(
        prometheus.HistogramOpts{
            Name: "inference_request_duration_seconds",
            Help: "Duration of inference requests",
        },
        []string{"method"},
    )
    
    requestCount = prometheus.NewCounterVec(
        prometheus.CounterOpts{
            Name: "inference_requests_total",
            Help: "Total number of inference requests",
        },
        []string{"method", "status"},
    )
)

func init() {
    prometheus.MustRegister(requestDuration)
    prometheus.MustRegister(requestCount)
}

func (s *InferenceServer) Generate(ctx context.Context, req *pb.GenerateRequest) (*pb.GenerateReply, error) {
    start := time.Now()
    
    // Process audio data (implement audio preprocessing)
    audioFeatures := preprocessAudio(req.AudioData)
    
    // Tokenize text prompt
    textTokens := tokenizeText(req.TextPrompt)
    
    // Run ONNX inference
    output, err := s.model.Run(audioFeatures, textTokens)
    if err != nil {
        requestCount.WithLabelValues("generate", "error").Inc()
        return nil, fmt.Errorf("inference failed: %v", err)
    }
    
    // Decode output tokens to text
    generatedText := decodeTokens(output)
    
    latency := time.Since(start)
    requestDuration.WithLabelValues("generate").Observe(latency.Seconds())
    requestCount.WithLabelValues("generate", "success").Inc()
    
    return &pb.GenerateReply{
        GeneratedText:   generatedText,
        ConfidenceScore: 0.85, // Implement confidence calculation
        LatencyMs:       float32(latency.Milliseconds()),
    }, nil
}

func (s *InferenceServer) Health(ctx context.Context, req *pb.HealthRequest) (*pb.HealthReply, error) {
    return &pb.HealthReply{Status: "healthy"}, nil
}

func main() {
    // Load ONNX model
    model, err := LoadONNXModel("../../models/onnx/mamba_multimodal.onnx")
    if err != nil {
        log.Fatalf("Failed to load ONNX model: %v", err)
    }
    
    // Start Prometheus metrics server
    go func() {
        http.Handle("/metrics", promhttp.Handler())
        log.Fatal(http.ListenAndServe(":8080", nil))
    }()
    
    // Start gRPC server
    lis, err := net.Listen("tcp", ":50051")
    if err != nil {
        log.Fatalf("Failed to listen: %v", err)
    }
    
    s := grpc.NewServer()
    pb.RegisterInferenceServiceServer(s, &InferenceServer{model: model})
    
    log.Println("gRPC server listening on :50051")
    log.Println("Metrics available on :8080/metrics")
    
    if err := s.Serve(lis); err != nil {
        log.Fatalf("Failed to serve: %v", err)
    }
}

